# humanoid_control

./: README.md
humanoid_controllers/: CMakeLists.txt  package.xml
humanoid_controllers/include/humanoid_controllers/: TargetTrajectoriesPublisher.h  humanoidController.h
humanoid_controllers/include/humanoid_controllers/visualization/: humanoidSelfCollisionVisualization.h
humanoid_controllers/launch/: load_cheat_controller.launch.py  load_joy_controller.launch.py  load_normal_controller.launch.py
humanoid_controllers/src/: CheatControllerNode.cpp  JoyControllerNode.cpp  NormalControllerNode.cpp  TargetTrajectoriesPublisher.cpp  humanoidController.cpp
humanoid_dummy/: CMakeLists.txt  package.xml
humanoid_dummy/include/humanoid_dummy/gait/: GaitKeyboardPublisher.h  GaitReceiver.h  ModeSequenceTemplateRos.h
humanoid_dummy/include/humanoid_dummy/visualization/: HumanoidVisualizer.h
humanoid_dummy/launch/: legged_robot_sqp.launch.py  multiplot.launch.py
humanoid_dummy/rviz/: humanoid.rviz
humanoid_dummy/src/: HumanoidDdpMpcNode.cpp  HumanoidDummyNode.cpp  HumanoidGaitCommandNode.cpp  HumanoidIpmMpcNode.cpp  HumanoidPoseCommandNode.cpp  HumanoidSqpMpcNode.cpp
humanoid_dummy/src/gait/: GaitKeyboardPublisher.cpp  GaitReceiver.cpp
humanoid_dummy/src/visualization/: HumanoidVisualizer.cpp
humanoid_estimation/: CMakeLists.txt  package.xml
humanoid_estimation/include/humanoid_estimation/: FromTopiceEstimate.h  LinearKalmanFilter.h  StateEstimateBase.h
humanoid_estimation/src/: FromTopicEstimate.cpp  LinearKalmanFilter.cpp  StateEstimateBase.cpp
humanoid_interface/: CMakeLists.txt  package.xml
humanoid_interface/config/command/: reference.info  reference_.info
humanoid_interface/config/mpc/: task.info  task_.info
humanoid_interface/src/constraint/: FootRollContraint.cpp
humanoid_legged_description/: CMakeLists.txt  package.xml
humanoid_legged_description/launch/: visualize.launch.py  visualize.launch_.py
humanoid_legged_description/urdf/: humanoid_legged_control_.urdf  humanoid_legged_origin.urdf
humanoid_mujoco_sim/: package.xml  setup.cfg  setup.py
humanoid_mujoco_sim/humanoid_mujoco_sim/: humanoid_sim.py  joy.py  teleop.py
humanoid_wbc/: CMakeLists.txt  package.xml
humanoid_wbc/include/humanoid_wbc/: WbcBase.h
humanoid_wbc/src/: WbcBase.cpp
